# flashcard

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  sample_box.txt  sample_db.txt  sample_db2.txt
src/: automat.rs  cardbox.rs  cardbox_parser.rs  cli.rs  constants.rs  db.rs  display.rs  flashcard.rs  lib.rs  main.rs  parser.rs  validator.rs
src/common/: fs.rs  time.rs
src/flashcards/: flashcard.rs  flashcard_factory.rs  mod.rs
